k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: msc-de1
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - name: http
      port: 5000
      targetPort: http
